--- a/HelloMVCWorld/Views/Shared/_Layout.cshtml
+++ b/HelloMVCWorld/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <nav class="right-float">
                     <a href="#" class="btn-pill">{{ navigation.home }}</a>
-                    <a href="#" class="btn-pill">{{ navigation.spents }}</a>
+                    <a href="/Spent" class="btn-pill">{{ navigation.spents }}</a>
                     <a href="#" class="btn-pill">{{ navigation.about }}</a>
                     <a href="#" class="btn btn-pill btn-primary-outline">{{ navigation.admin }}</a>
                 </nav>
@@ -33,10 +33,9 @@
 </body>
 @RenderSection("Scripts", required: false)
 <script src="https://kit.fontawesome.com/f18fa65c08.js" crossorigin="anonymous"></script>
-<!-- <script type="text/javascript" src="~/js/global.js"></script>
+<script type="text/javascript" src="~/js/global.js"></script>
 <script type="text/javascript" src="~/js/less.js"></script>
-<script type="text/javascript" src="~/js/jquery-1.11.1.min.js"></script>
--->
+<script type="text/javascript" src="~/js/jquery-3-5-1.js"></script>
 </html>
 
 
