Spent to Expenditures + filter refactoring

--- a/HelloMVCWorld/Views/Home/Index.cshtml
+++ b/HelloMVCWorld/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SpentCalculator.Models.Spent>;
+﻿@model IEnumerable<ExpendituresCalculator.Models.Spent>;
 @{
     ViewData["Title"] = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
