--- a/HelloMVCWorld/Views/Spent/Edit.cshtml
+++ b/HelloMVCWorld/Views/Spent/Edit.cshtml
@@ -9,23 +9,18 @@
     <form asp-action="View">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-element-group">
-            <label asp-for="SpentId" class="control-label"></label>
-            <input asp-for="SpentId" class="form-control" />
-            <span asp-validation-for="SpentId" class="text-danger"></span>
-        </div>
-        <div class="form-element-group">
             <label asp-for="Amount" class="control-label"></label>
-            <input asp-for="Amount" class="form-control" />
+            <input asp-for="Amount" class="form-control" value="@Model.Amount"/>
             <span asp-validation-for="Amount" class="text-danger"></span>
         </div>
         <div class="form-element-group">
             <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-control" />
+            <input asp-for="Name" class="form-control" value="@Model.Name"/>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-element-group">
             <label asp-for="DateTime" class="control-label"></label>
-            <input asp-for="DateTime" class="form-control" />
+            <input asp-for="DateTime" class="form-control" value="@Model.DateTime" />
             <span asp-validation-for="DateTime" class="text-danger"></span>
         </div>
         <div class="form-element-group">
